--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,10 @@
 [flake8]
 max-line-length=120
 
+[isort]
+line_length=120
+multi_line_output = 6
+
 [yapf]
 based_on_style = google
 column_limit = 200
