--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,14 @@
+[metadata]
+license-file = LICENSE
+
 [flake8]
-max-line-length=120
+ignore = E501
 
 [isort]
+atomic=true
+default_section = THIRDPARTY
 line_length=120
-multi_line_output = 6
+multi_line_output = 5
 
 [yapf]
 based_on_style = google
