--- a/setup.cfg
+++ b/setup.cfg
@@ -2,16 +2,18 @@
 license-file = LICENSE
 
 [flake8]
-ignore = E501
+exclude = .git
+max-line-length = 119
 
 [isort]
 atomic=true
 default_section = THIRDPARTY
-line_length=120
+line_length=119
 multi_line_output = 5
+not_skip = __init__.py
 
 [yapf]
 based_on_style = google
-column_limit = 150
+column_limit = 119
 # based_on_style = chromium
 # indent_width = 4
