--- a/setup.cfg
+++ b/setup.cfg
@@ -1,19 +1,16 @@
+[flake8]
+exclude = .git
+max-line-length = 120
+
+[isort]
+combine_as_imports = true
+default_section = THIRDPARTY
+known_first_party = qodomo
+line_length=120
+
 [metadata]
 license-file = LICENSE
 
-[flake8]
-exclude = .git
-max-line-length = 119
-
-[isort]
-atomic=true
-default_section = THIRDPARTY
-line_length=119
-multi_line_output = 5
-not_skip = __init__.py
-
 [yapf]
 based_on_style = google
-column_limit = 119
-# based_on_style = chromium
-# indent_width = 4
+column_limit = 120
