--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ max-line-length = 120
 [isort]
 combine_as_imports = true
 default_section = THIRDPARTY
-known_first_party = qodomo
+known_first_party = railguns
 line_length=120
 
 [metadata]
