--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,13 @@
+[build-system]
+requires = [
+    "setuptools>=42",
+    "wheel"
+]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "railguns"
-version = "0.52"
+version = "0.53"
 description = "Only My Railgun"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -12,17 +19,13 @@ authors = [
 ]
 classifiers = [
   "Development Status :: 5 - Production/Stable",
-  "Programming Language :: Python"
   "Environment :: Web Environment",
-  "Framework :: Django",
   "Framework :: Django :: 4.0",
   "Intended Audience :: Developers",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
-  "Programming Language :: Python",
-  "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.10",
-  "Programming Language :: Python :: 3 :: Only",
+  "Programming Language :: Python :: 3.11",
   "Topic :: Internet :: WWW/HTTP"
 ]
 dependencies = [
