--- a/.gitignore
+++ b/.gitignore
@@ -95,6 +95,13 @@ ipython_config.py
 #   install all needed dependencies.
 #Pipfile.lock
 
+# poetry
+#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
+#   This is especially recommended for binary packages to ensure reproducibility, and is more
+#   commonly ignored for libraries.
+#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
+#poetry.lock
+
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow
 __pypackages__/
 
@@ -138,6 +145,13 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+# PyCharm
+#  JetBrains specific template is maintainted in a separate JetBrains.gitignore that can
+#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
+#  and can be added to the global gitignore or merged into this file.  For a more nuclear
+#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
+#.idea/
+
 # [macOS](https://github.com/github/gitignore/blob/main/Global/macOS.gitignore)
 # General
 .DS_Store
@@ -174,7 +188,7 @@ Temporary Items
 .idea/**/dictionaries
 .idea/**/shelf
 
-# [Development]
+# [Django]
 **/migrations/**
 !**/migrations/__init__.py
 /static/
