--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "railguns"
-version = "0.65"
+version = "0.66"
 description = "Only My Railgun"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -29,7 +29,7 @@ classifiers = [
   "Topic :: Internet :: WWW/HTTP"
 ]
 dependencies = [
-  "django[argon2]==4.1.5",
+  "django[argon2]==4.2b1",
   "djangorestframework==3.14.0",
   "djangorestframework_simplejwt==5.2.2",
   "gunicorn==20.1.0",
@@ -38,9 +38,9 @@ dependencies = [
   "django-ckeditor==6.5.1",
   "django-filter==22.1",
   "django-htmlmin==0.11.0",
-  "hiredis==2.1.0",
+  "hiredis==2.2.1",
   "mysqlclient==2.1.1",
-  "redis==4.4.2"
+  "redis==4.5.1"
 ]
 
 [project.optional-dependencies]
