--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "railguns"
-version = "0.72"
+version = "0.80"
 description = "Only My Railgun"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -20,7 +20,7 @@ authors = [
 classifiers = [
   "Development Status :: 5 - Production/Stable",
   "Environment :: Web Environment",
-  "Framework :: Django :: 4.0",
+  "Framework :: Django :: 5.0",
   "Intended Audience :: Developers",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
@@ -29,7 +29,7 @@ classifiers = [
   "Topic :: Internet :: WWW/HTTP"
 ]
 dependencies = [
-  "django[argon2]==4.2.4",
+  "django[argon2]==5.0a1",
   "djangorestframework==3.14.0",
   "djangorestframework_simplejwt==5.3.0",
   "gunicorn==21.2.0",
@@ -40,7 +40,7 @@ dependencies = [
   "django-htmlmin==0.11.0",
   "hiredis==2.2.3",
   "mysqlclient==2.1.1",
-  "redis==5.0.0"
+  "redis==5.0.1"
 ]
 
 [project.optional-dependencies]
