--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "railguns"
-version = "0.81"
+version = "0.82"
 description = "Only My Railgun"
 readme = "README.md"
 requires-python = ">=3.12"
@@ -28,16 +28,16 @@ classifiers = [
   "Topic :: Internet :: WWW/HTTP"
 ]
 dependencies = [
-  "django[argon2]==5.0a1",
+  "django[argon2]==5.0.2",
   "djangorestframework==3.14.0",
   "djangorestframework_simplejwt==5.3.0",
   "gunicorn==21.2.0",
-  "uvicorn==0.23.2",
+  "uvicorn==0.27.1",
   #
-  "django-ckeditor==6.7.0",
-  "django-filter==23.2",
+  "django-ckeditor==6.7.1",
+  "django-filter==23.5",
   "django-htmlmin==0.11.0",
-  "hiredis==2.2.3",
+  "hiredis==2.3.2",
   "mysqlclient==2.2.4",
   "redis==5.0.1"
 ]
