--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,16 +7,15 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "railguns"
-version = "0.82"
+version = "0.83"
 description = "Only My Railgun"
 readme = "README.md"
-requires-python = ">=3.12"
+authors = [
+  {name = "NY", email = "nyssance@icloud.com"}
+]
 license = {file = "LICENSE"}
 keywords = ["django", "railguns"]
-authors = [
-  {email = "nyssance@icloud.com"},
-  {name = "NY"}
-]
+requires-python = ">=3.12"
 classifiers = [
   "Development Status :: 5 - Production/Stable",
   "Environment :: Web Environment",
@@ -30,7 +29,7 @@ classifiers = [
 dependencies = [
   "django[argon2]==5.0.2",
   "djangorestframework==3.14.0",
-  "djangorestframework_simplejwt==5.3.0",
+  "djangorestframework_simplejwt==5.3.1",
   "gunicorn==21.2.0",
   "uvicorn==0.27.1",
   #
@@ -44,7 +43,7 @@ dependencies = [
 
 [project.optional-dependencies]
 test = [
-  "pytest < 5.0.0",
+  "pytest > 8.0.0",
   "pytest-cov[all]"
 ]
 
