--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,10 @@
 [build-system]
-requires = [
-    "setuptools>=42",
-    "wheel"
-]
+requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "railguns"
-version = "0.83"
+version = "0.84"
 description = "Only My Railgun"
 readme = "README.md"
 authors = [
@@ -38,7 +35,7 @@ dependencies = [
   "django-htmlmin==0.11.0",
   "hiredis==2.3.2",
   "mysqlclient==2.2.4",
-  "redis==5.0.1"
+  "redis==5.0.2"
 ]
 
 [project.optional-dependencies]
