--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,11 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "railguns"
-version = "0.90"
+version = "0.91"
 description = "Only My Railgun"
 readme = "README.md"
-authors = [
-  {name = "NY", email = "nyssance@icloud.com"}
-]
-license = {file = "LICENSE"}
+authors = [{ name = "NY", email = "nyssance@icloud.com" }]
+license = { file = "LICENSE" }
 keywords = ["django", "railguns"]
 requires-python = ">=3.12"
 classifiers = [
@@ -21,27 +19,24 @@ classifiers = [
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
   "Programming Language :: Python :: 3.12",
-  "Topic :: Internet :: WWW/HTTP"
+  "Topic :: Internet :: WWW/HTTP",
 ]
 dependencies = [
-  "django[argon2]==5.0.6",
-  "djangorestframework==3.15.1",
+  "django[argon2]==5.1",
+  "djangorestframework==3.15.2",
   "djangorestframework_simplejwt==5.3.1",
-  "gunicorn==21.2.0",
-  "uvicorn==0.29.0",
+  "gunicorn==23.0.0",
+  "uvicorn==0.30.6",
   #
   "django-ckeditor==6.7.1",
-  "django-filter==24.2",
+  "django-filter==24.3",
   "django-htmlmin==0.11.0",
   "mysqlclient==2.2.4",
-  "redis==5.0.3"
+  "redis==5.0.8",
 ]
 
 [project.optional-dependencies]
-test = [
-  "pytest > 8.0.0",
-  "pytest-cov[all]"
-]
+test = ["pytest > 8.0.0", "pytest-cov[all]"]
 
 [project.urls]
 homepage = "https://github.com/nyssance/railguns"
