--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "railguns"
-version = "0.93"
+version = "0.94"
 description = "Only My Railgun"
 readme = "README.md"
 authors = [{ name = "NY", email = "nyssance@icloud.com" }]
@@ -28,7 +28,7 @@ dependencies = [
   "gunicorn==23.0.0",
   "uvicorn==0.30.6",
   #
-  "django-ckeditor-5==5 0.2.13",
+  "django-ckeditor-5==0.2.13",
   "django-filter==24.3",
   "django-htmlmin==0.11.0",
   "mysql-connector-python==9.0.0",
