--- a/.gitignore
+++ b/.gitignore
@@ -102,7 +102,17 @@ ipython_config.py
 #   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
 #poetry.lock
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+# pdm
+#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
+#pdm.lock
+#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
+#   in version control.
+#   https://pdm.fming.dev/latest/usage/project/#working-with-version-control
+.pdm.toml
+.pdm-python
+.pdm-build/
+
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
 
 # Celery stuff
@@ -146,7 +156,7 @@ dmypy.json
 cython_debug/
 
 # PyCharm
-#  JetBrains specific template is maintainted in a separate JetBrains.gitignore that can
+#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
@@ -180,6 +190,14 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+# [Django](https://www.djangoproject.com)
+**/migrations/**
+!**/migrations/__init__.py
+/static/
+/tmp/
+dump.rdb
+/node_modules/
+
 # [JetBrains](https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore)
 # User-specific stuff
 .idea/**/workspace.xml
@@ -187,12 +205,3 @@ Temporary Items
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
-
-# [Django]
-**/migrations/**
-!**/migrations/__init__.py
-/static/
-/tmp/
-dump.rdb
-/node_modules/
-package-lock.json
