--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "railguns"
-version = "0.102"
+version = "0.103"
 description = "Only My Railgun"
 readme = "README.md"
 requires-python = ">=3.13"
@@ -18,17 +18,17 @@ classifiers = [
   "Topic :: Internet :: WWW/HTTP",
 ]
 dependencies = [
-  "django[argon2]==5.1.4",
+  "django[argon2]==5.2b1",
   "djangorestframework==3.15.2",
-  "djangorestframework_simplejwt==5.3.1",
+  "djangorestframework_simplejwt==5.4.0",
   "gunicorn==23.0.0",
   "uvicorn==0.34.0",
   #
-  "django-ckeditor-5==0.2.15",
-  "django-filter==24.3",
+  "django-ckeditor-5==0.2.17",
+  "django-filter==25.1",
   "django-htmlmin==0.11.0",
-  "mysql-connector-python==9.1.0",
-  "redis==5.2.1",
+  "mysql-connector-python==9.2.0",
+  "redis==5.3.0b5",
 ]
 
 [project.optional-dependencies]
