--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "railguns"
-version = "0.103"
+version = "0.104"
 description = "Only My Railgun"
 readme = "README.md"
 requires-python = ">=3.13"
@@ -18,7 +18,7 @@ classifiers = [
   "Topic :: Internet :: WWW/HTTP",
 ]
 dependencies = [
-  "django[argon2]==5.2b1",
+  "django[argon2]==5.1.6",
   "djangorestframework==3.15.2",
   "djangorestframework_simplejwt==5.4.0",
   "gunicorn==23.0.0",
@@ -28,7 +28,7 @@ dependencies = [
   "django-filter==25.1",
   "django-htmlmin==0.11.0",
   "mysql-connector-python==9.2.0",
-  "redis==5.3.0b5",
+  "redis==5.2.1",
 ]
 
 [project.optional-dependencies]
